# autarch

./: .gitignore  LICENSE  Makefile  PKGBUILD  README.md  __init__.py  autarch.py  pyproject.toml  requirements.txt  setup.py
